[package]
name = "mlide"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders", "image"] }
image = { version = "0.25", features = ["png", "jpeg", "gif", "bmp"] }
egui = "0.29.1"
walkdir = "2.4"
rfd = "0.12"
ansi-parser = "0.9"
regex = "1.10"
egui_commonmark = { version = "0.18", default-features = false }
serde_json = "1.0"      
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5" 

[features]
arboard = []